--- a/proj.html
+++ b/proj.html
@@ -157,10 +157,10 @@
       <!-- Project 2 -->
       <div class="project-card">
         <div class="project-thumbnail" style="height: 220px; position: relative; overflow: hidden;">
-          <video width="640" height="360" controls>
-  <source src="https://raw.githubusercontent.com/rohish-shrees12/PORTFOLIO/main/Vibe.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+     <video width="100%" height="100%" controls style="object-fit: cover;">
+            <source src="Vibe.mp4" type="video/mp4">
+            Your browser doesn't support video
+          </video>
         </div>
         <div class="project-info">
           <h3 class="project-title">Demon Slayer – Blade Edit</h3>
@@ -239,4 +239,5 @@
 </body>
 
 </html>
+
 
