--- a/proj.html
+++ b/proj.html
@@ -158,7 +158,7 @@
       <div class="project-card">
         <div class="project-thumbnail" style="height: 220px; position: relative; overflow: hidden;">
      <video width="100%" height="100%" controls style="object-fit: cover;">
-            <source src="Vibe.mp4" type="video/mp4">
+            <source src="demon-slayer.mp4" type="video/mp4">
             Your browser doesn't support video
           </video>
         </div>
@@ -239,5 +239,6 @@
 </body>
 
 </html>
+
 
 
