--- a/proj.html
+++ b/proj.html
@@ -150,7 +150,7 @@
         <div class="project-info">
           <h3 class="project-title">Chainsaw Man – Demon Hunter</h3>
           <p style="color: #a0a0c0; font-size: 0.95rem; margin-bottom: 1.2rem;">Intense action-packed AMV with vibe edit & professional editing</p>
-          <a href="../Contact us/contact.html" style="display: inline-block; margin-top: 1rem; color: white; text-decoration: none; font-weight: 600; background: linear-gradient(90deg, #a855f7, #c084fc); padding: 0.7rem 1.5rem; border-radius: 50px; transition: all 0.3s;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 25px rgba(168, 85, 247, 0.5)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Contact for Details →</a>
+          <a href="contact.html" style="display: inline-block; margin-top: 1rem; color: white; text-decoration: none; font-weight: 600; background: linear-gradient(90deg, #a855f7, #c084fc); padding: 0.7rem 1.5rem; border-radius: 50px; transition: all 0.3s;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 25px rgba(168, 85, 247, 0.5)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Contact for Details →</a>
         </div>
       </div>
 
@@ -165,7 +165,7 @@
         <div class="project-info">
           <h3 class="project-title">Demon Slayer – Blade Edit</h3>
           <p style="color: #a0a0c0; font-size: 0.95rem; margin-bottom: 1.2rem;">Action-packed AMV with stunning effects</p>
-          <a href="../Contact us/contact.html" style="display: inline-block; margin-top: 1rem; color: white; text-decoration: none; font-weight: 600; background: linear-gradient(90deg, #a855f7, #c084fc); padding: 0.7rem 1.5rem; border-radius: 50px; transition: all 0.3s;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 25px rgba(168, 85, 247, 0.5)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Contact for Details →</a>
+          <a href="contact.html" style="display: inline-block; margin-top: 1rem; color: white; text-decoration: none; font-weight: 600; background: linear-gradient(90deg, #a855f7, #c084fc); padding: 0.7rem 1.5rem; border-radius: 50px; transition: all 0.3s;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 25px rgba(168, 85, 247, 0.5)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Contact for Details →</a>
         </div>
       </div>
 
@@ -180,7 +180,7 @@
         <div class="project-info">
           <h3 class="project-title">Jujutsu Kaisen – Quick Edit</h3>
           <p style="color: #a0a0c0; font-size: 0.95rem; margin-bottom: 1.2rem;">Fast-paced battle sequences with quick edit</p>
-          <a href="../Contact us/contact.html" style="display: inline-block; margin-top: 1rem; color: white; text-decoration: none; font-weight: 600; background: linear-gradient(90deg, #a855f7, #c084fc); padding: 0.7rem 1.5rem; border-radius: 50px; transition: all 0.3s;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 25px rgba(168, 85, 247, 0.5)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Contact for Details →</a>
+          <a href="contact.html" style="display: inline-block; margin-top: 1rem; color: white; text-decoration: none; font-weight: 600; background: linear-gradient(90deg, #a855f7, #c084fc); padding: 0.7rem 1.5rem; border-radius: 50px; transition: all 0.3s;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 25px rgba(168, 85, 247, 0.5)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Contact for Details →</a>
         </div>
       </div>
 
@@ -195,7 +195,7 @@
         <div class="project-info">
           <h3 class="project-title">AMV– Normal Edit</h3>
           <p style="color: #a0a0c0; font-size: 0.95rem; margin-bottom: 1.2rem;">Classic storytelling with smooth normal edit flow</p>
-          <a href="../Contact us/contact.html" style="display: inline-block; margin-top: 1rem; color: white; text-decoration: none; font-weight: 600; background: linear-gradient(90deg, #a855f7, #c084fc); padding: 0.7rem 1.5rem; border-radius: 50px; transition: all 0.3s;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 25px rgba(168, 85, 247, 0.5)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Contact for Details →</a>
+          <a href="contact.html" style="display: inline-block; margin-top: 1rem; color: white; text-decoration: none; font-weight: 600; background: linear-gradient(90deg, #a855f7, #c084fc); padding: 0.7rem 1.5rem; border-radius: 50px; transition: all 0.3s;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 25px rgba(168, 85, 247, 0.5)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Contact for Details →</a>
         </div>
       </div>
 
@@ -210,7 +210,7 @@
         <div class="project-info">
           <h3 class="project-title">Next Epic Project</h3>
           <p style="color: #a0a0c0; font-size: 0.95rem; margin-bottom: 1.2rem;">New amazing project in progress</p>
-          <a href="../Contact us/contact.html" style="display: inline-block; margin-top: 1rem; color: white; text-decoration: none; font-weight: 600; background: linear-gradient(90deg, #a855f7, #c084fc); padding: 0.7rem 1.5rem; border-radius: 50px; transition: all 0.3s;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 25px rgba(168, 85, 247, 0.5)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Contact for Details →</a>
+          <a href="contact.html" style="display: inline-block; margin-top: 1rem; color: white; text-decoration: none; font-weight: 600; background: linear-gradient(90deg, #a855f7, #c084fc); padding: 0.7rem 1.5rem; border-radius: 50px; transition: all 0.3s;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 25px rgba(168, 85, 247, 0.5)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none';">Contact for Details →</a>
         </div>
       </div>
     </div>
@@ -239,6 +239,7 @@
 </body>
 
 </html>
+
 
 
 
