--- a/contact.html
+++ b/contact.html
@@ -327,6 +327,38 @@
 
   <!-- Optional: tiny script for year or future features -->
   <script>
+    <script>
+  document.querySelector('.contact-form').addEventListener('submit', async function(e) {
+    e.preventDefault();
+    
+    const form = e.target;
+    const btn = form.querySelector('button[type="submit"]');
+    btn.disabled = true;
+    btn.textContent = "Sending...";
+
+    try {
+      const formData = new FormData(form);
+      const response = await fetch(form.action, {
+        method: 'POST',
+        body: formData
+      });
+
+      const json = await response.json();
+
+      if (json.success) {
+        alert("Message sent! Thank you — I'll reply soon.");
+        form.reset();
+      } else {
+        alert("Something went wrong: " + (json.message || "Try again later."));
+      }
+    } catch (err) {
+      alert("Network error. Please check your connection.");
+    }
+
+    btn.disabled = false;
+    btn.textContent = "Send Message →";
+  });
+</script>
     // You can add form success message later if you connect backend
   </script>
 </body>
