--- a/proj.html
+++ b/proj.html
@@ -141,7 +141,9 @@
       <!-- Project 1 -->
       <div class="project-card">
         <div class="project-thumbnail" style="height: 220px; position: relative; overflow: hidden;">
-          <video width="100%" height="100%" controls style="object-fit: cover;">
+          
+          <video width="100%" height="100%" controls style="object-fit: cover;" poster="chainsaw (1).jpg">
+            
             <source src="chainsaw.mp4" type="video/mp4">
             Your browser doesn't support video
           </video>
@@ -239,6 +241,7 @@
 </body>
 
 </html>
+
 
 
 
