--- a/proj.html
+++ b/proj.html
@@ -173,7 +173,7 @@
 
       <!-- Project 3 -->
       <div class="project-card">
-        <div class="project-thumbnail" style="height: 220px; position: relative; overflow: hidden;">
+        <div class="project-thumbnail" style="height: 220px; position: relative; overflow: hidden;" poster="Vibe.jpg">
           <video width="100%" height="100%" controls style="object-fit: cover;">
             <source src="jujutsu-kaisen.mp4" type="video/mp4">
             Your browser doesn't support video
@@ -241,6 +241,7 @@
 </body>
 
 </html>
+
 
 
 
