--- a/proj.html
+++ b/proj.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projects • Rohish Shrees</title>
+  <title>• Rohish Shrees</title>
   <style>
     /* Page-specific styles – you can move to styles.css later */
     .projects-page {
@@ -241,6 +241,7 @@
 </body>
 
 </html>
+
 
 
 
