--- a/index.html
+++ b/index.html
@@ -313,9 +313,9 @@ body {
       </a>
 
       <nav class="nav" aria-label="Primary navigation">
-        <a class="nav-link" href="about.html">About</a>
-        <a class="nav-link" href="proj.html">Projects</a>
-        <a class="nav-link" href="contact.html">Contact</a>
+        <a class="nav-link" href="/webpagesabout.html">About</a>
+        <a class="nav-link" href="webpages/proj.html">Projects</a>
+        <a class="nav-link" href="webpages/contact.html">Contact</a>
       </nav>
 
       <div class="topbar-actions">
@@ -376,6 +376,7 @@ body {
   </script>
 
 </body>
+
 
 
 
