--- a/webpages/contact.html
+++ b/webpages/contact.html
@@ -6,7 +6,10 @@
   <title>Contact • Rohish Shrees</title>
 
   
- 
+ <link rel="apple-touch-icon" sizes="180x180" href="ICONS/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="ICONS/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="ICONS/favicon-16x16.png">
+<link rel="manifest" href="ICONS/site.webmanifest">
 
 
 </head>
