--- a/webpages/proj.html
+++ b/webpages/proj.html
@@ -113,6 +113,10 @@
       font-style: italic;
     }
   </style>
+  <link rel="apple-touch-icon" sizes="180x180" href="ICONS/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="ICONS/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="ICONS/favicon-16x16.png">
+<link rel="manifest" href="ICONS/site.webmanifest">
 </head>
 <body class="projects-page">
 
@@ -241,6 +245,7 @@
 </body>
 
 </html>
+
 
 
 
