--- a/webpages/about.html
+++ b/webpages/about.html
@@ -11,7 +11,7 @@
 </head>
 <head>
     <title>About</title>
-    <link rel="webpages/stylesheet" href="style.css">
+    <link rel="stylesheet" href="webpages/style.css">
 </head>
 <body class="PORTFOLIO/about-page">
   <div style="padding: 2rem 5%; max-width: 1400px; margin: 0 auto;">
