--- a/webpages/contact.html
+++ b/webpages/contact.html
@@ -252,7 +252,7 @@
     </style>
 
   <div style="padding: 2rem 5%; max-width: 1400px; margin: 0 auto;">
-    <a href="PORTFOLIO/index.html" style="display: inline-flex; align-items: center; gap: 0.7rem; color: #ffffff; text-decoration: none; font-weight: 600; transition: all 0.3s ease; margin-top: 1rem; background: linear-gradient(90deg, #a855f7, #c084fc); padding: 0.7rem 1.5rem; border-radius: 50px; box-shadow: 0 4px 15px rgba(168, 85, 247, 0.3);" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 25px rgba(168, 85, 247, 0.5)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 15px rgba(168, 85, 247, 0.3)';">← Rohish.</a>
+    <a href="index.html" style="display: inline-flex; align-items: center; gap: 0.7rem; color: #ffffff; text-decoration: none; font-weight: 600; transition: all 0.3s ease; margin-top: 1rem; background: linear-gradient(90deg, #a855f7, #c084fc); padding: 0.7rem 1.5rem; border-radius: 50px; box-shadow: 0 4px 15px rgba(168, 85, 247, 0.3);" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 25px rgba(168, 85, 247, 0.5)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 15px rgba(168, 85, 247, 0.3)';">← Rohish.</a>
   </div>
 
   <main class="contact-shell" role="main">
