--- a/proj.html
+++ b/proj.html
@@ -179,7 +179,7 @@
       <div class="project-card">
         <div class="project-thumbnail" style="height: 220px; position: relative; overflow: hidden;" >
           <video width="100%" height="100%" controls style="object-fit: cover;">
-            <source src="jujutsu-kaisen.mp4" type="video/mp4">
+            <source src="edits for web/jujutsu-kaisen.mp4" type="video/mp4">
             Your browser doesn't support video
           </video>
         </div>
@@ -194,7 +194,7 @@
       <div class="project-card">
         <div class="project-thumbnail" style="height: 220px; position: relative; overflow: hidden;">
           <video width="100%" height="100%" controls style="object-fit: cover;"poster="edits for web/Vibe.jpg">
-            <source src="Vibe.mp4" type="video/mp4">
+            <source src="edits for web/Vibe.mp4" type="video/mp4">
             Your browser doesn't support video
           </video>
         </div>
@@ -245,6 +245,7 @@
 </body>
 
 </html>
+
 
 
 
