--- a/proj.html
+++ b/proj.html
@@ -164,7 +164,7 @@
       <div class="project-card">
         <div class="project-thumbnail" style="height: 220px; position: relative; overflow: hidden;">
      <video width="100%" height="100%" controls style="object-fit: cover;" poster="edits for web/demon-slayer.jpg">
-            <source src="edits for web/demon-slayer.mp4
+            <source src="./edits for web/demon-slayer.mp4
                  " type="video/mp4">
             Your browser doesn't support video
           </video>
@@ -195,7 +195,7 @@
       <div class="project-card">
         <div class="project-thumbnail" style="height: 220px; position: relative; overflow: hidden;">
           <video width="100%" height="100%" controls style="object-fit: cover;"poster="edits for web/Vibe.jpg">
-            <source src="edits for web/Vibe1.mp4" type="video/mp4">
+            <source src="./edits for web/Vibe1.mp4" type="video/mp4">
             Your browser doesn't support video
           </video>
         </div>
@@ -246,6 +246,7 @@
 </body>
 
 </html>
+
 
 
 
