--- a/about.html
+++ b/about.html
@@ -1,9 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-     <link rel="apple-touch-icon" sizes="180x180" href="ICONS/apple-touch-icon.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact • Rohish Shrees</title>
+<link rel="stylesheet" href="style.css">
+
+  
+ <link rel="apple-touch-icon" sizes="180x180" href="ICONS/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="ICONS/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="ICONS/favicon-16x16.png">
 <link rel="manifest" href="ICONS/site.webmanifest">
-    <link rel="stylesheet" href="style.css">
+
+
 </head>
 <body class="about-page">
   <div style="padding: 2rem 5%; max-width: 1400px; margin: 0 auto;">
