--- a/contact.html
+++ b/contact.html
@@ -304,7 +304,7 @@
       action="https://formsubmit.co/shreesrohish@gmail.com"
       method="POST">
 
-<input type="hidden" name="_next" value="https://rohish-shrees12.github.io/Rohish">
+<input type="hidden" name="_next" value="rohish-shrees12.github.io/rohish/">
 
           <div class="field">
             <input id="name" type="text" name="name" placeholder=" " required>
