--- a/contact.html
+++ b/contact.html
@@ -304,7 +304,7 @@
       action="https://formsubmit.co/shreesrohish@gmail.com"
       method="POST">
 
-<input href="https://formsubmit.co/shreesrohish@gmail.com next=rohish-shrees12.github.io/rohish/" target="method" type="hidden">Email us</a>
+<input href="https://formsubmit.co/shreesrohish@gmail.com" next="rohish-shrees12.github.io/rohish/" target="method" type="hidden">Email us</a>
 
           <div class="field">
             <input id="name" type="text" name="name" placeholder=" " required>
